build date in AboutDialog